--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-statsmodels
-prophet
-streamlit
-openpyxl
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.9.2
+seaborn==0.13.2
+scikit-learn==1.5.2
+statsmodels==0.14.4
+prophet==1.1.5
+streamlit==1.40.1
+
